# backend

./: .env.example  .env.template  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  skills-lock.json
.atl/: skill-registry.md
.github/workflows/: ci.yml  release-please.yml
src/: lib.rs  main.rs
src/api/dtos/: mod.rs
src/api/routes/: booking.rs  contact.rs  health.rs  mod.rs  notifications.rs  users.rs
src/application/: mod.rs
src/application/commands/: mod.rs  notification_commands.rs  user_commands.rs
src/application/queries/: mod.rs  user_queries.rs
src/domain/: mod.rs
src/domain/entities/: mod.rs
src/domain/repositories/: mod.rs
src/domain/services/: email_port.rs  mod.rs  notification.rs  user.rs
src/infrastructure/: mod.rs
src/infrastructure/adapters/: mod.rs
src/infrastructure/adapters/postgres/: mod.rs
src/infrastructure/adapters/resend/: mod.rs
src/infrastructure/config/: mod.rs
src/infrastructure/mappers/: dto_to_domain.rs  entity_to_dto.rs  mod.rs
