[package]
name = "vipsa_backend"
version = "0.1.1"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Email
resend-rs = "0.25"

# Config
config = "0.14"
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }